// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`bubble Bubble component work 1`] = `
<div
  class="ant-bubble css-var-root ant-bubble-start"
>
  <div
    class="ant-bubble-content ant-bubble-content-filled"
  >
    test
  </div>
</div>
`;

exports[`bubble rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ant-bubble css-var-root ant-bubble-start ant-bubble-rtl"
>
  <div
    class="ant-bubble-content ant-bubble-content-filled"
  >
    test
  </div>
</div>
`;
